--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "getmac>=0.9.5",
     "httpx>=0.28.1",
     "loguru>=0.7.3",
+    "mss>=10.0.0",
+    "pillow>=11.3.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "typer>=0.16.0",
